WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308501
Element::tabIndexForBindings doesn't need to be a virtual function
https://bugs.webkit.org/show_bug.cgi?id=308501
Summary
Element::tabIndexForBindings doesn't need to be a virtual function
Ryosuke Niwa
Reported
2026-02-23 16:02:38 PST
Remove the virtual keyword since it doesn't need to be a virtual function.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2026-02-23 16:05:19 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59272
EWS
Comment 2
2026-02-23 17:36:34 PST
Committed
308090@main
(97ffcec40755): <
https://commits.webkit.org/308090@main
> Reviewed commits have been landed. Closing PR #59272 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-02-23 17:37:13 PST
<
rdar://problem/171029147
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug