Element::tabIndexForBindings doesn't need to be a virtual function https://bugs.webkit.org/show_bug.cgi?id=308501

Reviewed by Tim Nguyen.

Made Element::tabIndexForBindings non-virtual since no element overrides it.

* Source/WebCore/dom/Element.h:

Canonical link: https://commits.webkit.org/308090@main